--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -364,30 +364,46 @@ limitations under the License. -->
   <string name="update_filter">Filter aktualisieren</string>
   <string name="add_filter_msg">Der Filter \'%1$s\' wurde hinzugefügt.</string>
   <string name="update_filter_msg">Der Filter \'%1$s\' wurde aktualisiert.</string>
-  <string name="filter_longterm_name">filter_longterm_name1</string>
-  <string name="filter_longterm_desc">filter_longterm_desc1</string>
-  <string name="filter_percentagechangegreater_name"></string>
+  <string name="filter_percentagechangegreater_name">Änderung % &gt;</string>
   <string name="filter_percentagechangegreater_desc"></string>
-  <string name="filter_percentagechangeless_name"></string>
+  <string name="filter_percentagechangeless_name">Änderung % &lt;</string>
   <string name="filter_percentagechangeless_desc"></string>
-  <string name="filter_symbolcontainstype_name"></string>
+  <string name="filter_symbolcontainstype_name">Aktienkürzel enthält</string>
   <string name="filter_symbolcontainstype_desc"></string>
-  <string name="filter_notecontainstype_name"></string>
+  <string name="filter_notecontainstype_name">Anmerkung enthält</string>
   <string name="filter_notecontainstype_desc"></string>
-  <string name="filter_assetgreater_name"></string>
+  <string name="filter_assetgreater_name">Bestand &gt;</string>
   <string name="filter_assetgreater_desc"></string>
-  <string name="filter_assetless_name"></string>
+  <string name="filter_assetless_name">Bestand &lt;</string>
   <string name="filter_assetless_desc"></string>
-  <string name="filter_profitgreater_name"></string>
+  <string name="filter_profitgreater_name">Gewinn % &gt;</string>
   <string name="filter_profitgreater_desc"></string>
-  <string name="filter_profitless_name"></string>
+  <string name="filter_profitless_name">Gewinn &lt;</string>
   <string name="filter_profitless_desc"></string>
-  <string name="filter_profitpercentagegreater_name"></string>
+  <string name="filter_profitpercentagegreater_name">Gewinn % &gt;</string>
   <string name="filter_profitpercentagegreater_desc"></string>
-  <string name="filter_profitpercentageless_name"></string>
+  <string name="filter_profitpercentageless_name">Gewinn % &lt;</string>
   <string name="filter_profitpercentageless_desc"></string>
-  <string name="filter_dividendpercentagegreater_name"></string>
+  <string name="filter_dividendpercentagegreater_name">Dividend % &gt;</string>
   <string name="filter_dividendpercentagegreater_desc"></string>
-  <string name="filter_dividendpercentageless_name"></string>
+  <string name="filter_dividendpercentageless_name">Dividend % &lt;</string>
   <string name="filter_dividendpercentageless_desc"></string>
+  <string name="filter_firstassetsoldbefore_name">Früheste Aktien verkauft bevor</string>
+  <string name="filter_firstassetsoldbefore_desc"></string>
+  <string name="filter_firstassetsoldafter_name">Früheste Aktien verkauft nach</string>
+  <string name="filter_firstassetsoldafter_desc"></string>
+  <string name="filter_firstassetboughtbefore_name">Früheste Aktien gekauft bevor</string>
+  <string name="filter_firstassetboughtbefore_desc"></string>
+  <string name="filter_firstassetboughtafter_name">Früheste Aktien gekauft nach</string>
+  <string name="filter_firstassetboughtafter_desc"></string>
+  <string name="filter_lastassetsoldbefore_name">Letzte Aktien verkauft bevor</string>
+  <string name="filter_lastassetsoldbefore_desc"></string>
+  <string name="filter_lastassetsoldafter_name">Letzte Aktien verkauft nach</string>
+  <string name="filter_lastassetsoldafter_desc"></string>
+  <string name="filter_lastassetboughtbefore_name">Letzte Aktien gekauft bevor</string>
+  <string name="filter_lastassetboughtbefore_desc"></string>
+  <string name="filter_lastassetboughtafter_name">Letzte Aktien gekauft nach</string>
+  <string name="filter_lastassetboughtafter_desc"></string>
+  <string name="filter_longterm_name">Letzte Aktien vor einem Jahr gekauft</string>
+  <string name="filter_longterm_desc"></string>
 </resources>
