--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -367,46 +367,46 @@ limitations under the License. -->
   <string name="update_filter">Update filter</string>
   <string name="add_filter_msg">The filter \'%1$s\' was added.</string>
   <string name="update_filter_msg">The filter \'%1$s\' was updated.</string>
-  <string name="filter_percentagechangegreater_name"></string>
+  <string name="filter_percentagechangegreater_name">Change % &gt;</string>
   <string name="filter_percentagechangegreater_desc"></string>
-  <string name="filter_percentagechangeless_name"></string>
+  <string name="filter_percentagechangeless_name">Change % &lt;</string>
   <string name="filter_percentagechangeless_desc"></string>
-  <string name="filter_symbolcontainstype_name"></string>
+  <string name="filter_symbolcontainstype_name">Symbol contains</string>
   <string name="filter_symbolcontainstype_desc"></string>
-  <string name="filter_notecontainstype_name"></string>
+  <string name="filter_notecontainstype_name">Note contains</string>
   <string name="filter_notecontainstype_desc"></string>
-  <string name="filter_assetgreater_name"></string>
+  <string name="filter_assetgreater_name">Asset &gt;</string>
   <string name="filter_assetgreater_desc"></string>
-  <string name="filter_assetless_name"></string>
+  <string name="filter_assetless_name">Asset &lt;</string>
   <string name="filter_assetless_desc"></string>
-  <string name="filter_profitgreater_name"></string>
+  <string name="filter_profitgreater_name">Profit &gt;</string>
   <string name="filter_profitgreater_desc"></string>
-  <string name="filter_profitless_name"></string>
+  <string name="filter_profitless_name">Profit &lt;</string>
   <string name="filter_profitless_desc"></string>
-  <string name="filter_profitpercentagegreater_name"></string>
+  <string name="filter_profitpercentagegreater_name">Profit &gt;</string>
   <string name="filter_profitpercentagegreater_desc"></string>
-  <string name="filter_profitpercentageless_name"></string>
+  <string name="filter_profitpercentageless_name">Profit &lt;</string>
   <string name="filter_profitpercentageless_desc"></string>
-  <string name="filter_dividendpercentagegreater_name"></string>
+  <string name="filter_dividendpercentagegreater_name">Profit % &gt;</string>
   <string name="filter_dividendpercentagegreater_desc"></string>
-  <string name="filter_dividendpercentageless_name"></string>
+  <string name="filter_dividendpercentageless_name">Profit % &lt;</string>
   <string name="filter_dividendpercentageless_desc"></string>
-  <string name="filter_firstassetsoldbefore_name"></string>
+  <string name="filter_firstassetsoldbefore_name">First asset sold before</string>
   <string name="filter_firstassetsoldbefore_desc"></string>
-  <string name="filter_firstassetsoldafter_name"></string>
+  <string name="filter_firstassetsoldafter_name">First asset sold after</string>
   <string name="filter_firstassetsoldafter_desc"></string>
-  <string name="filter_firstassetboughtbefore_name"></string>
+  <string name="filter_firstassetboughtbefore_name">First asset bought before</string>
   <string name="filter_firstassetboughtbefore_desc"></string>
-  <string name="filter_firstassetboughtafter_name"></string>
+  <string name="filter_firstassetboughtafter_name">First asset bought after</string>
   <string name="filter_firstassetboughtafter_desc"></string>
-  <string name="filter_lastassetsoldbefore_name"></string>
+  <string name="filter_lastassetsoldbefore_name">Last asset sold before</string>
   <string name="filter_lastassetsoldbefore_desc"></string>
-  <string name="filter_lastassetsoldafter_name"></string>
+  <string name="filter_lastassetsoldafter_name">Last asset sold after</string>
   <string name="filter_lastassetsoldafter_desc"></string>
-  <string name="filter_lastassetboughtbefore_name"></string>
+  <string name="filter_lastassetboughtbefore_name">Last asset bought before</string>
   <string name="filter_lastassetboughtbefore_desc"></string>
-  <string name="filter_lastassetboughtafter_name"></string>
+  <string name="filter_lastassetboughtafter_name">Last asset bought after</string>
   <string name="filter_lastassetboughtafter_desc"></string>
-  <string name="filter_longterm_name">filter_longterm_name</string>
-  <string name="filter_longterm_desc">filter_longterm_desc</string>
+  <string name="filter_longterm_name">Last asset bought long term</string>
+  <string name="filter_longterm_desc">Stocks bought at least one year ago have less capital gain tax when sold.</string>
 </resources>
