--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -367,9 +367,9 @@ limitations under the License. -->
   <string name="update_filter">Update filter</string>
   <string name="add_filter_msg">The filter \'%1$s\' was added.</string>
   <string name="update_filter_msg">The filter \'%1$s\' was updated.</string>
-  <string name="filter_percentagechangegreater_name">Change % &gt;</string>
+  <string name="filter_percentagechangegreater_name">Stock price change % &gt;</string>
   <string name="filter_percentagechangegreater_desc"></string>
-  <string name="filter_percentagechangeless_name">Change % &lt;</string>
+  <string name="filter_percentagechangeless_name">Stock price change % &lt;</string>
   <string name="filter_percentagechangeless_desc"></string>
   <string name="filter_symbolcontainstype_name">Symbol contains</string>
   <string name="filter_symbolcontainstype_desc"></string>
@@ -383,13 +383,13 @@ limitations under the License. -->
   <string name="filter_profitgreater_desc"></string>
   <string name="filter_profitless_name">Profit &lt;</string>
   <string name="filter_profitless_desc"></string>
-  <string name="filter_profitpercentagegreater_name">Profit &gt;</string>
+  <string name="filter_profitpercentagegreater_name">Profit % &gt;</string>
   <string name="filter_profitpercentagegreater_desc"></string>
-  <string name="filter_profitpercentageless_name">Profit &lt;</string>
+  <string name="filter_profitpercentageless_name">Profit % &lt;</string>
   <string name="filter_profitpercentageless_desc"></string>
-  <string name="filter_dividendpercentagegreater_name">Profit % &gt;</string>
+  <string name="filter_dividendpercentagegreater_name">Dividend % &gt;</string>
   <string name="filter_dividendpercentagegreater_desc"></string>
-  <string name="filter_dividendpercentageless_name">Profit % &lt;</string>
+  <string name="filter_dividendpercentageless_name">Dividend % &lt;</string>
   <string name="filter_dividendpercentageless_desc"></string>
   <string name="filter_firstassetsoldbefore_name">First asset sold before</string>
   <string name="filter_firstassetsoldbefore_desc"></string>
