--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -358,35 +358,35 @@ limitations under the License. -->
   <string name="delete_filter_confirm">Sind Sie sicher, dass Sie den Filter \'%1$s\' entfernen möchten?</string>
   <string name="delete_filter_msg">Der Filter \'%1$s\' wurde entfernt.</string>
   <string name="add_filter">Filter hinzufügen</string>
-  <string name="filter_type">Filtertyp</string>
+  <string name="filter_type">Filter</string>
   <string name="filter_value_text">Text</string>
   <string name="filter_value_double">Zahlenwert</string>
   <string name="update_filter">Filter aktualisieren</string>
   <string name="add_filter_msg">Der Filter \'%1$s\' wurde hinzugefügt.</string>
   <string name="update_filter_msg">Der Filter \'%1$s\' wurde aktualisiert.</string>
-  <string name="filter_percentagechangegreater_name">Aktienpreisänderung % &gt;</string>
+  <string name="filter_percentagechangegreater_name">Aktienpreisänderung % größer als</string>
   <string name="filter_percentagechangegreater_desc"></string>
-  <string name="filter_percentagechangeless_name">Aktienpreisänderung % &lt;</string>
+  <string name="filter_percentagechangeless_name">Aktienpreisänderung % kleiner als</string>
   <string name="filter_percentagechangeless_desc"></string>
   <string name="filter_symbolcontainstype_name">Aktienkürzel enthält</string>
   <string name="filter_symbolcontainstype_desc"></string>
   <string name="filter_notecontainstype_name">Anmerkung enthält</string>
   <string name="filter_notecontainstype_desc"></string>
-  <string name="filter_assetgreater_name">Bestand &gt;</string>
+  <string name="filter_assetgreater_name">Bestand größer als</string>
   <string name="filter_assetgreater_desc"></string>
-  <string name="filter_assetless_name">Bestand &lt;</string>
+  <string name="filter_assetless_name">Bestand kleiner als</string>
   <string name="filter_assetless_desc"></string>
-  <string name="filter_profitgreater_name">Gewinn &gt;</string>
+  <string name="filter_profitgreater_name">Gewinn größer als</string>
   <string name="filter_profitgreater_desc"></string>
-  <string name="filter_profitless_name">Gewinn &lt;</string>
+  <string name="filter_profitless_name">Gewinn kleiner als</string>
   <string name="filter_profitless_desc"></string>
-  <string name="filter_profitpercentagegreater_name">Gewinn % &gt;</string>
+  <string name="filter_profitpercentagegreater_name">Gewinn % größer als</string>
   <string name="filter_profitpercentagegreater_desc"></string>
-  <string name="filter_profitpercentageless_name">Gewinn % &lt;</string>
+  <string name="filter_profitpercentageless_name">Gewinn % kleiner als</string>
   <string name="filter_profitpercentageless_desc"></string>
-  <string name="filter_dividendpercentagegreater_name">Dividende % &gt;</string>
+  <string name="filter_dividendpercentagegreater_name">Dividende % größer als</string>
   <string name="filter_dividendpercentagegreater_desc"></string>
-  <string name="filter_dividendpercentageless_name">Dividende % &lt;</string>
+  <string name="filter_dividendpercentageless_name">Dividende % kleiner als</string>
   <string name="filter_dividendpercentageless_desc"></string>
   <string name="filter_firstassetsoldbefore_name">Früheste Aktien verkauft bevor</string>
   <string name="filter_firstassetsoldbefore_desc"></string>
@@ -406,4 +406,8 @@ limitations under the License. -->
   <string name="filter_lastassetboughtafter_desc"></string>
   <string name="filter_longterm_name">Letzte Aktien vor einem Jahr gekauft</string>
   <string name="filter_longterm_desc">Aktien die vor einem Jahr oder mehr gekauft worden sind, haben beim Verkauf einen Steuervorteil.</string>
+  <string name="filter_quantitygreater_name">Aktienanzahl größer als</string>
+  <string name="filter_quantitygreater_desc"></string>
+  <string name="filter_quantityless_name">Aktienanzahl kleiner als</string>
+  <string name="filter_quantityless_desc"></string>
 </resources>
