--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -361,35 +361,35 @@ limitations under the License. -->
   <string name="delete_filter_confirm">Are you sure to delete the filter \'%1$s\' ?</string>
   <string name="delete_filter_msg">The filter \'%1$s\' was deleted.</string>
   <string name="add_filter">Add filter</string>
-  <string name="filter_type">Filter type</string>
+  <string name="filter_type">Filter</string>
   <string name="filter_value_text">Text value</string>
   <string name="filter_value_double">Number value</string>
   <string name="update_filter">Update filter</string>
   <string name="add_filter_msg">The filter \'%1$s\' was added.</string>
   <string name="update_filter_msg">The filter \'%1$s\' was updated.</string>
-  <string name="filter_percentagechangegreater_name">Stock price change % &gt;</string>
+  <string name="filter_percentagechangegreater_name">Stock price change % greater than</string>
   <string name="filter_percentagechangegreater_desc"></string>
-  <string name="filter_percentagechangeless_name">Stock price change % &lt;</string>
+  <string name="filter_percentagechangeless_name">Stock price change % less than</string>
   <string name="filter_percentagechangeless_desc"></string>
   <string name="filter_symbolcontainstype_name">Symbol contains</string>
   <string name="filter_symbolcontainstype_desc"></string>
   <string name="filter_notecontainstype_name">Note contains</string>
   <string name="filter_notecontainstype_desc"></string>
-  <string name="filter_assetgreater_name">Asset &gt;</string>
+  <string name="filter_assetgreater_name">Asset greater than</string>
   <string name="filter_assetgreater_desc"></string>
-  <string name="filter_assetless_name">Asset &lt;</string>
+  <string name="filter_assetless_name">Asset less than</string>
   <string name="filter_assetless_desc"></string>
-  <string name="filter_profitgreater_name">Profit &gt;</string>
+  <string name="filter_profitgreater_name">Profit greater than</string>
   <string name="filter_profitgreater_desc"></string>
-  <string name="filter_profitless_name">Profit &lt;</string>
+  <string name="filter_profitless_name">Profit less than</string>
   <string name="filter_profitless_desc"></string>
-  <string name="filter_profitpercentagegreater_name">Profit % &gt;</string>
+  <string name="filter_profitpercentagegreater_name">Profit % greater than</string>
   <string name="filter_profitpercentagegreater_desc"></string>
-  <string name="filter_profitpercentageless_name">Profit % &lt;</string>
+  <string name="filter_profitpercentageless_name">Profit % less than</string>
   <string name="filter_profitpercentageless_desc"></string>
-  <string name="filter_dividendpercentagegreater_name">Dividend % &gt;</string>
+  <string name="filter_dividendpercentagegreater_name">Dividend % greater than</string>
   <string name="filter_dividendpercentagegreater_desc"></string>
-  <string name="filter_dividendpercentageless_name">Dividend % &lt;</string>
+  <string name="filter_dividendpercentageless_name">Dividend % less than</string>
   <string name="filter_dividendpercentageless_desc"></string>
   <string name="filter_firstassetsoldbefore_name">First asset sold before</string>
   <string name="filter_firstassetsoldbefore_desc"></string>
@@ -409,4 +409,8 @@ limitations under the License. -->
   <string name="filter_lastassetboughtafter_desc"></string>
   <string name="filter_longterm_name">Last asset bought long term</string>
   <string name="filter_longterm_desc">Stocks bought at least one year ago have less capital gain tax when sold.</string>
+  <string name="filter_quantitygreater_name">Stock quantity greater than</string>
+  <string name="filter_quantitygreater_desc"></string>
+  <string name="filter_quantityless_name">Stock quantity less than</string>
+  <string name="filter_quantityless_desc"></string>
 </resources>
