--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -419,4 +419,6 @@ limitations under the License. -->
   <string name="filter_capitalgaingreater_desc"></string>
   <string name="filter_capitalgainless_name">Executed Capital Gain less than</string>
   <string name="filter_capitalgainless_desc"></string>
+  <string name="filter_name">filter name</string>
+  <string name="filter_name_not_empty">not empty</string>
 </resources>
